# MGX_GMDS

./: CMakeLists.txt  README.md
.github/workflows/: spack-ubuntu.yml
FRAME/Core/src/: Tools.cpp
FRAME/FHeDo/inc/: AdvancingFrontFieldCommon.h  AdvancingFrontFieldGen3D.h  FrameFieldLaplacianSmoothing.h  THexer.h
FRAME/FHeDo/src/: AdvancingFrontFieldCommon.cpp  FrameFieldLaplacianSmoothing.cpp  LaplaceCross2D.cpp  LevelSetCross2D.cpp  THexer.cpp
FRAME/Patching/src/: Patching2D.cpp  main.cpp
FRAME/SingGraphBuilder/inc/: SingularityGraphBuilder.h  SingularityGraphBuilder2D.h
FRAME/SingGraphBuilder/src/: SingularityGraph.cpp  SingularityGraphBuilder.cpp  SingularityGraphBuilder2D.cpp  main.cpp
FRAME/frameFieldGen/src/: CrossFieldGeneration2D.cpp  StabilityBallCross2D.cpp
gmds/inc/GMDS/Algo/: DistanceFieldBuilder3D.h
gmds/src/Algo/: BoundaryOperator.cpp
